--- a/paintCodeSample1/Base.lproj/Main.storyboard
+++ b/paintCodeSample1/Base.lproj/Main.storyboard
@@ -17,8 +17,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cMg-mF-ynf">
-                                <rect key="frame" x="117" y="279" width="69" height="30"/>
-                                <state key="normal" title="Madhurya">
+                                <rect key="frame" x="117" y="279" width="82" height="30"/>
+                                <state key="normal" title="Madhurya q">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
